kustomize/apps/centraldashboard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: centraldashboard
  name: centraldashboard
spec:
  replicas: 1
  template:
    spec:
      containers:
      - env:
        - name: REGISTRATION_FLOW
          value: "true"
        image: k8scc01covidacr.azurecr.io/kubeflow/centraldashboard:c3164369ba27790fc133132639adad396541c5c8
        imagePullPolicy: IfNotPresent
        name: centraldashboard
      serviceAccountName: centraldashboard
      imagePullSecrets:
      - name: k8scc01covidacr-registry-connection
